--- a/manual.html
+++ b/manual.html
@@ -70,7 +70,7 @@
 			<div id="m-main-home-content">
 				<div style="display:flex;justify-content: center;align-items: center">
 					<div style="flex-basis:25%;padding-right:1rem"><img src="icon1024.webp" style="width:100%"></div>
-					<div style="flex-basis:75%;border-bottom:1px solid white"><h1 style="margin:0;padding:0"><span style="font-size: 1.5rem;color: white;font-weight: bold">SimTIVA Manual</span></h1></div>
+					<div style="flex-basis:75%;border-bottom:1px solid white"><h1 style="margin:0;padding:0"><span style="font-size: 1.5rem;color: white;font-weight: bold">SimTIVA Manual <span style='opacity: 0.3;font-weight:normal'>v2.0</span></span></h1></div>
 				</div>
 				<div style="display:flex;justify-content: center;align-items: center">
 					<div style="flex-basis: 25%"></div>
