--- a/index.html
+++ b/index.html
@@ -330,6 +330,9 @@
 						<br>
 						<a class="button huge" onclick="initcetbolus(0);hideallmodal();">INTERMITTENT BOLUS<i class="fas fa-hourglass-half fa-fw" style="color:#c19f14"></i></a>
 					</div>
+					<div id="maxrateblock">
+						<input id="max_rate_input">
+					</div>
 					<div id="complexmodeselection0" style="margin-top: 10px; border:2px solid #ccc; border-radius:9px;box-shadow:inset 0 4px 0 0 rgba(0,0,0,0.15); padding: 0px 5px;">
 						<table class="" style="width:100%">
 							<tr class="fr" style="height: 4rem; vertical-align:bottom">
