--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
 									</td>
 								</tr>
 								<tr style="height:1rem">
-									<td colspan="2"  style="padding:0 0 3px 0;border-top:0;opacity:0.6;font-size:0.7rem;font-style:italic"><span id="page2bolustext">Flash: assume bolus given instantaneously. Ideal for manual rapid bolus.</span></td>
+									<td colspan="2"  style="padding:0 0 3px 0;border-top:0;opacity:0.6;font-size:0.7rem;font-style:italic;pointer-events:none"><span id="page2bolustext">Flash: assume bolus given instantaneously. Ideal for manual rapid bolus.</span></td>
 								</tr>
 								<tr style="height:2rem;padding-top:3px">
 									<td style="padding:3px 0 0 0">Maintenance accuracy:</td>
@@ -367,7 +367,7 @@
 									<td colspan="2" style="padding:0;border-top:0;opacity:0.6;font-size:0.7rem;font-style:italic">Threshold for rate changes. Lazy: less frequent rate changes. Accurate: more frequent rate changes.</td>
 								</tr>
 							</table>
-							<div style="padding-top:15px;width:100%;text-align:left">
+							<div style="width:100%;text-align:left">
 								<a class="button invert wide" style="padding-right:0" id="page2proceed">Proceed</a>
 								<a class="button muted right" onclick="pageTwoFunction();">Back</a>
 								
