--- a/index.html
+++ b/index.html
@@ -2132,16 +2132,18 @@
 		<div class="card" id="card_options">
 			<div class="cardtitle">OPTIONS</div>
 			<div class="cardcontents">
-						<div id="ptolcardoptions">
-      <label class="container labelptolcontainer" style="">Display detailed tab info
-          <input type="checkbox" onChange="toggleshowtabinfo();" id="isTabInfo"><span class="checkmark"></span>
-      </label>
-      <!--<label class="container labelptolcontainer" style="">Display effective dose margins <span style='font-size: 80%'>(PTOL50-90)</span>
-          <input type="checkbox" id="" onChange="toggleshowPTOLmargins();" checked><span class="checkmark"></span>
-      </label>
-    -->
-    </div>
-				<i style="color:grey; font-size:90%; padding-top:10px; padding-bottom:10px; display:block;">Some options are experimental features and available on Android devices only: these include Vibrate, Sound, Wakelock, and Notifications.</i>
+
+    		<div class="optionscardtitle collapsiblecard">INFUSION SETTINGS</div>
+    		<div class="optionscardcontents">
+				<div id="ptolcardoptions">
+	      			<label class="container labelptolcontainer" style="">Display detailed tab info
+	          		<input type="checkbox" onChange="toggleshowtabinfo();" id="isTabInfo"><span class="checkmark"></span>
+	      			</label>
+	      <!--<label class="container labelptolcontainer" style="">Display effective dose margins <span style='font-size: 80%'>(PTOL50-90)</span>
+	          <input type="checkbox" id="" onChange="toggleshowPTOLmargins();" checked><span class="checkmark"></span>
+	      </label>
+	    -->
+	    		</div>
 				<table class="table-control">
 					<!--options array-->
 					<!-- 
@@ -2163,7 +2165,33 @@
 					[1,0]
 					-->
 					<!--end options array-->
-					<tr class="fr" id="option_unit_row"><td>Unit for propofol <i class="far fa-question-circle tooltip background"><span class="tooltiptext" style="width:160px">Secondary unit for propofol infusion rate apart from ml/h. Refresh your CPT/CET target after change.</span></i></td>
+					<tr id="option_bolusspeed_row" style="display:none" class="fr"><td>Bolus max. speed <i class="far fa-question-circle tooltip background"><span class="tooltiptext">Max bolus rate for programmed bolus. Flash means instantaneous bolus.</span></i></td>
+						<td>
+							<select id="select_bolusspeed" onchange="applybolusspeed();">
+											<option value="0" selected>Flash</option>
+											<option value="1200">1200ml/h</option>
+											<option value="1100">1100ml/h</option>
+											<option value="1000">1000ml/h</option>
+											<option value="900">900ml/h</option>
+											<option value="800">800ml/h</option>
+											<option value="700">700ml/h</option>
+											<option value="600">600ml/h</option>
+											<option value="500">500ml/h</option>
+											<option value="400">400ml/h</option>
+											<option value="300">300ml/h</option>
+							</select>
+						</td>
+					</tr>
+					<tr id="option_threshold_row" class="fr"><td>Maintenance accuracy <i class="far fa-question-circle tooltip background"><span class="tooltiptext" style="width:170px">Threshold of CPT/CET schemes. Lazy: less frequent rate changes. Accurate: more frequent changes.</span></i></td>
+						<td>
+							<select id="select_threshold">
+								<option value="0">Auto</option>
+								<option value="1">Lazy</option>
+								<option value="2">Accurate</option> <!--0.13, 0.565-->
+							</select>
+						</td>
+					</tr>
+					<tr id="option_unit_row"><td>Unit for propofol <i class="far fa-question-circle tooltip background"><span class="tooltiptext" style="width:160px">Secondary unit for propofol infusion rate apart from ml/h. Refresh your CPT/CET target after change.</span></i></td>
 						<td>
 							<select id="select_unit">
 								<option value="mgh">mg/kg/h</option>
@@ -2198,17 +2226,12 @@
 							</select>
 						</td>
 					</tr>
-
-					<tr id="option_threshold_row"><td>Threshold <i class="far fa-question-circle tooltip background"><span class="tooltiptext">Adjusts the threshold of CPT/CET infusion schemes. Lazy: less frequent rate changes. Accurate: more frequent rate changes.</span></i></td>
-						<td>
-							<select id="select_threshold">
-								<option value="0">Auto</option>
-								<option value="1">Lazy</option>
-								<option value="2">Accurate</option> <!--0.13, 0.565-->
-							</select>
-						</td>
-					</tr>
-					<tr><td>Wakelock <i class="far fa-question-circle tooltip background"><span class="tooltiptext">Keeps screen on. Experimental. Android & some desktop devices only.</span></i></td>
+				</table>
+			</div><!-- end infusion settings -->
+			<div class="optionscardtitle collapsiblecard">PROGRAM FEATURES</div>
+			<div class="optionscardcontents"><!-- start prograam features -->
+				<table class="table-control">
+					<tr class="fr"><td>Wakelock <i class="far fa-question-circle tooltip background"><span class="tooltiptext">Keeps screen on. Experimental. Android & some desktop devices only.</span></i></td>
 						<td>
 							<select id="select_wakelock">
 								<option value="off">Off</option>
@@ -2241,21 +2264,8 @@
 							</select>
 						</td>
 					</tr>
-					<!--
-					<tr><td>Intermittent bolus <i style="font-size:70%">(Unstable)</i></td>
-						<td>
-							<select id="select_PPinterval">
-								<option value="120">Q2min</option>
-								<option value="180" selected>Q3min</option>
-								<option value="300">Q5min</option>
-							</select>
-						</td>
-					</tr>
-				-->
-					
-
-					
 				</table>
+			</div>
 				<a class="button" id="btn_apply" onclick="applyoptions();">Apply</a>
 				<a class="button right muted" id="btn_defaultoptions" onclick="loadoptions('default');loadoptions();applyoptions();">Reset settings</a>
 				<!--
