--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
 						<div id="page2maxrate" class="">
 							<table class="table-Init" style="text-align:left">
 								<tr class="fr" style="height:2rem">
-									<td style="padding:0">Induction max. speed:</td>
+									<td style="padding:0">Max bolus speed:</td>
 									<td style="padding:0">
 										<select id="page2selectmaxrate" onchange="sendToUpdateMax(this.value);">
 											<option value="0" selected>Flash</option>
@@ -2168,7 +2168,7 @@
 					[1,0]
 					-->
 					<!--end options array-->
-					<tr id="option_bolusspeed_row" style="display:none" class="fr"><td>Bolus max. speed <i class="far fa-question-circle tooltip background"><span class="tooltiptext">Max bolus rate for programmed bolus. Flash means instantaneous bolus.</span></i></td>
+					<tr id="option_bolusspeed_row" style="display:none" class="fr"><td>Max bolus speed <i class="far fa-question-circle tooltip background"><span class="tooltiptext">Max bolus rate for programmed bolus. Flash means instantaneous bolus.</span></i></td>
 						<td>
 							<select id="select_bolusspeed" onchange="applybolusspeed();">
 											<option value="0" selected>Flash</option>
