--- a/manual.html
+++ b/manual.html
@@ -1001,6 +1001,8 @@ function loadChapterURL() {
 			getChapter(0,1);
 		}
 	}
+	//custom umami event tracking
+	umami.track('manual', state);
 }
 
 
