--- a/view.html
+++ b/view.html
@@ -58,6 +58,7 @@
     <meta name="keywords" content="simtiva, tiva, tci, free, simulator, terence, luk, cuhk, propofol, app, smartphones, apple, android">
     <meta name="author" content="Terence Luk">
     <title>SimTIVA Viewer</title>
+    <script defer src="https://cloud.umami.is/script.js" data-website-id="fe14ba98-f4c0-4536-94fa-9a0a4c1ed75e"></script>
 </head>
 <body class="" id="windowbody">
 		<div id="modalHistory" class="modal">
